# advent-of-code

./: .gitignore  pyproject.toml  readme.md
.run/: Day 04.run.xml  pytest day 02.run.xml  pytest day 04.run.xml
01/: functions.py  input_formatted.txt  readme.md  test_functions.py
03/: readme.md
04/: main.py  readme.md  src.py  tests.py
05/: src.py
2023/02/: main.py  readme.md  test_functions.py
2023/03/: test_functions.py
2023/05/: main.py
2024/: readme.md
2024/01/: readme.md
2024/02/: main.go
year_2023/day_01/: main.py  test_functions_day01.py  timing_tests.py
year_2023/day_02/: functions.py  test_functions_day02.py
year_2023/day_03/: functions.py  main.py  test_functions_day03.py
year_2023/day_04/: main.py
year_2023/day_05/: readme.md
year_2024/: readme.md
year_2024/01/: main.go
year_2025/: readme.md
year_2025/day_01/: functions.py  main.py  readme.md  test_functions_year2025_day01.py
year_2025/day_02/: functions.py  main.py  readme.md  test_functions_year2025_day02.py
year_2025/day_03/: functions.py  main.py  readme.md  test_fuctions_year2025_day03.py
year_2025/day_04/: functions.py  main.py  readme.md  test_fuctions_year2025_day04.py
year_2025/day_05/: functions.py  main.py  readme.md  test_fuctions_year2025_day05.py
year_2025/day_06/: functions.py  main.py  readme.md
year_2025/day_07/: functions.py  main.py  readme.md
year_2025/day_08/: functions.py  main.py  readme.md
year_2025/day_09/: functions.py  main.py  readme.md
year_2025/day_10/: functions.py  input.txt  main.py  readme.md
year_2025/day_11/: main.py  (+2 more)
