[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["vitekzach <vitekzach@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.16.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
memory-profiler = "^0.61.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
